--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv": "^6.3.6",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "fileupload": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   }
 }
